--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <Html>
 <body>
 <center>
-<h1>This is the demo for Continuous Deployment on Kubernetes with GitOps and ArgoCD...</h1> <br>
+<h1>This is the demo for Continuous Deployment on Kubernetes with GitOps and ArgoCD.</h1> <br>
 <br>
-<img src='https://raw.githubusercontent.com/Ajaypathak372/cloud-task2/master/task2.jpg' width=600 height=480>
+<img src='/images/it-works.jpg' width=1280 height=1024>
 </center>
 </body>
 </Html>
