--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <center>
 <h1>This is the demo for Continuous Deployment on Kubernetes with GitOps and ArgoCD.</h1> <br>
 <br>
-<img src='/images/it-works.jpg' width=1280 height=1024>
+<img src='/gitops-argocd/images/it-works.jpg' width=1280 height=1024>
 </center>
 </body>
 </Html>
